# text-to-timestamps

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
sample/: preview.html  sample-config.json  sample-input.tsv
sample/output/: 1-corinthians-13.block.json  1-corinthians-13.block.vtt  1-corinthians-13.phrase.csv  1-corinthians-13.phrase.json  1-corinthians-13.phrase.vtt  1-corinthians-13.word.csv  1-corinthians-13.word.json  1-corinthians-13.word.vtt  come-thou-fount-september-2020.block.csv  come-thou-fount-september-2020.block.json  come-thou-fount-september-2020.block.vtt  come-thou-fount-september-2020.phrase.csv  come-thou-fount-september-2020.phrase.json  come-thou-fount-september-2020.phrase.vtt  come-thou-fount-september-2020.word.csv  come-thou-fount-september-2020.word.json  come-thou-fount-september-2020.word.vtt  one-small-step.block.csv  one-small-step.block.json  one-small-step.block.vtt  one-small-step.phrase.csv  one-small-step.phrase.json  one-small-step.phrase.vtt  one-small-step.word.csv  one-small-step.word.json  one-small-step.word.vtt
src/text_to_timestamps/: align.py  benchmark.py  command_line.py  default_config.json  output.py  prepare.py  process.py  transcribe.py  transcribe_kyutai.py  transcribe_transformers.py  utils.py
